--- a/YoloLoss_rewrite.ipynb
+++ b/YoloLoss_rewrite.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(device)\n",
-    "device = 'cpu'"
+    "# device = 'cpu'"
    ]
   },
   {
@@ -91,35 +91,57 @@
    "source": [
     "train_loader = DataLoader(train_set,batch_size=3,shuffle=False,num_workers=0)\n",
     "train_iter = iter(train_loader)\n",
-    "for i in range(1):\n",
-    "    img,target = next(train_iter)\n",
-    "    img,target = img.to(device), target.to(device)\n",
     "\n",
-    "    output = net.forward(img)\n",
-    "#     loss = net.criterion(output, target)\n",
-    "#     print (loss)    \n",
-    "#     loss.backward()\n",
-    "#     optimizer.step()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'output' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-80e62457f4b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'output' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer.zero_grad\n",
+    "\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([7, 30])\n",
-      "tensor(20.4206, grad_fn=<AddBackward0>)\n"
+      "tensor(10.1726, device='cuda:0', grad_fn=<DivBackward0>)\n"
      ]
     }
    ],
    "source": [
-    "loss = my_forward(output, target)\n",
-    "print (loss)"
+    "img,target = next(train_iter)\n",
+    "img,target = img.to(device), target.to(device)\n",
+    "optimizer.zero_grad\n",
+    "output = net.forward(img)\n",
+    "loss = net.criterion(output, target)\n",
+    "print (loss)    \n",
+    "loss.backward()\n",
+    "optimizer.step()\n",
+    "                \n"
    ]
   },
   {
@@ -127,111 +149,77 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def my_forward(pred, target):\n",
-    " \n",
+    "lamb_class_prob = 1\n",
+    "lamb_obj_conf = 1\n",
+    "lamb_noobj_conf = 0.5\n",
+    "lamb_coord = 5\n",
     "\n",
-    "#     \"referce : https://github.com/thtrieu/darkflow/tree/master/darkflow/net (Tensor Flow)\"\n",
+    "class_loss = 0\n",
+    "conf_loss = 0 \n",
+    "local_loss = 0\n",
     "\n",
+    "n = pred.size()[0]\n",
     "\n",
-    "    loss=0\n",
+    "# find where iamge is present of the grid\n",
+    "object_mask = target[:,:,:,4] > 0\n",
+    "object_mask = object_mask.unsqueeze(-1).expand_as(target)\n",
+    "noobject_mask = 1-object_mask\n",
     "\n",
-    "    lamb_class_prob = 1\n",
-    "    lamb_obj_conf = 1\n",
-    "    lamb_noobj_conf = 0.5\n",
-    "    lamb_coord = 5\n",
-    "    \n",
-    "    batch_size = y_pred.size(0)\n",
+    "## separate output and prediction \n",
+    "object_pred = (pred[object_mask]).contiguous().view(-1,30)\n",
+    "object_target = (target[object_mask]).contiguous().view(-1,30)\n",
     "\n",
-    "    \n",
-    "    \n",
-    "#     loss = 0\n",
-    "#     n = pred.size()[0]\n",
-    "#     object_mask = target[:,:,:,4] > 0\n",
-    "#     object_mask = object_mask.unsqueeze(-1).expand_as(target)\n",
-    "#     # 1. Classification loss   \n",
-    "#     class_pred = pred[object_mask].view(-1,30)\n",
-    "#     print (class_pred.size())\n",
-    "#     class_pred = class_pred[:,20:]\n",
-    "#     class_target = target[object_mask].view(-1,30)\n",
-    "#     class_target = class_target[:,20:]\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "#     class_loss = F.mse_loss(class_pred,class_target,reduction='sum')\n",
-    "    \n",
-    "#     # 2. Localization loss\n",
-    "#     coords_pred = pred[]\n",
-    "    \n",
-    "    \n",
-    "    return loss\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.3114, 0.0603, 0.3071],\n",
-      "        [0.2400, 0.2074, 0.1113],\n",
-      "        [0.5634, 0.0395, 0.3035]])\n",
-      "tensor([[1, 1, 1],\n",
-      "        [0, 0, 0],\n",
-      "        [1, 1, 1]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = torch.rand((3,3))\n",
-    "print (a)\n",
-    "b = torch.from_numpy(np.array([[1,1,1],[0,0,0],[1,1,1]]))\n",
-    "print (b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = a[b]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([3, 3, 3])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (c.size()\n",
-    "      )"
+    "noobj_pred = (pred[noobject_mask]).contiguous().view(-1,30)\n",
+    "noobj_target = (target[noobject_mask]).contiguous().view(-1,30)\n",
+    "\n",
+    "# 1. Classification loss for both obj and no_boj\n",
+    "object_pred_class = object_pred[:,10:]\n",
+    "object_target_class = object_target[:,10:]\n",
+    "class_loss += lamb_class_prob*F.mse_loss(object_pred_class,object_target_class, reduction='sum')\n",
+    "\n",
+    "# 2. Confidence loss for no_obj\n",
+    "noobj_pred_conf = noobj_pred[:,[4,9]]\n",
+    "noobj_target_conf = noobj_target[:,[4,9]]\n",
+    "conf_loss += lamb_noobj_conf * F.mse_loss(noobj_pred_conf,noobj_target_conf, reduction ='sum')\n",
+    "\n",
+    "# 3. Loss for grids with object\n",
+    "object_pred_coord = torch.cat((object_pred[:,:4],object_pred[:,5:9]), dim =1).contiguous().view(object_pred.size()[0]*2,-1)\n",
+    "object_target_coord = torch.cat((object_target[:,:4],object_target[:,5:9]), dim =1).contiguous().view(object_target.size()[0]*2,-1)\n",
+    "\n",
+    "object_pred_coord_xy = torch.cat([object_pred_coord[:,:2]/7.0 - torch.pow(object_pred_coord[:,2:],2)/2.0,\\\n",
+    "                                  object_pred_coord[:,:2]/7.0 + torch.pow(object_pred_coord[:,2:],2)/2.0],\\\n",
+    "                                 dim=1)\n",
+    "object_target_coord_xy = torch.cat([object_target_coord[:,:2]/7.0 - torch.pow(object_target_coord[:,2:],2)/2.0,\\\n",
+    "                                  object_target_coord[:,:2]/7.0 + torch.pow(object_target_coord[:,2:],2)/2.0],\\\n",
+    "                                 dim=1)\n",
+    "\n",
+    "# compute iou to decide responsible bounding box. \n",
+    "ious = cal_iou(object_pred_coord_xy, object_target_coord_xy)\n",
+    "ious = ious[range(ious.size()[0]),range(ious.size()[0])].view(-1,2)\n",
+    "best_boxes = torch.eq(ious, torch.max(ious, 1)[0].unsqueeze(1)).view(-1,1)\n",
+    "ious = ious.view(-1,1)\n",
+    "\n",
+    "# 3-1Calculated localization error for selected bounding boxes.\n",
+    "selected_pred_coord = object_pred_coord*best_boxes.expand_as(object_pred_coord).float()\n",
+    "selected_target_coord = object_target_coord*best_boxes.expand_as(object_target_coord).float()\n",
+    "local_loss = lamb_coord * F.mse_loss(selected_pred_coord, selected_target_coord, reduction='sum')\n",
+    "\n",
+    "# 3-1Calculat confidence error for selected bounding boxes.\n",
+    "object_pred_conf = object_pred[:,[4,9]].view(-1,1)\n",
+    "selected_pred_conf = object_pred_conf*best_boxes.float()\n",
+    "selected_target_conf = ious.expand_as(selected_pred_conf)*best_boxes.float()\n",
+    "conf_loss += lamb_obj_conf * F.mse_loss(selected_pred_conf,selected_target_conf,reduction='sum')\n",
+    "\n",
+    "# 3-2Calculat confidence error for selected bounding boxes.\n",
+    "unselected_pred_conf = object_pred_conf*(1-best_boxes).float()\n",
+    "unselected_target_conf = ious.expand_as(selected_pred_conf)*(1-best_boxes).float()\n",
+    "conf_loss += lamb_noobj_conf * F.mse_loss(unselected_pred_conf, unselected_target_conf, reduction='sum')\n",
+    "\n",
+    "loss = local_loss + conf_loss + class_loss\n",
+    "loss = loss/n\n",
+    "print (loss)\n",
+    "\n"
    ]
   },
   {
@@ -239,100 +227,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([3, 4, 5]) torch.Size([3, 4, 5]) (20, 5, 1) 94569426107440\n",
-      "tensor([[[-0.0927, -0.0730,  0.3672,  1.3897, -0.5202],\n",
-      "         [ 0.3496,  1.9922, -0.1502,  0.8792,  2.1860],\n",
-      "         [ 0.8653,  0.9986,  0.6206, -0.3740,  0.6920],\n",
-      "         [ 0.4099, -1.8327, -0.2812,  0.2164, -0.1108]],\n",
-      "\n",
-      "        [[ 0.2095,  0.6548, -0.9549, -1.3656, -0.5294],\n",
-      "         [ 1.1057,  1.8712,  0.9089, -0.5541,  0.5597],\n",
-      "         [ 1.2444,  0.6688,  1.0857,  2.3752, -0.3824],\n",
-      "         [ 0.2090, -1.5950, -1.3451, -0.5951,  0.3794]],\n",
-      "\n",
-      "        [[-1.8272,  0.5864, -0.6422,  2.5283, -1.8432],\n",
-      "         [-0.2214,  1.1106,  1.5708, -0.6046, -0.6657],\n",
-      "         [ 0.2525,  0.6406, -0.6576, -0.1579, -1.3209],\n",
-      "         [ 1.5862,  0.1400,  0.0511, -0.6695, -1.6985]]])\n",
-      "torch.Size([4, 5, 3]) torch.Size([4, 5, 3]) (5, 1, 20) 94569426107440\n",
-      "tensor([[[-0.0927,  0.2095, -1.8272],\n",
-      "         [-0.0730,  0.6548,  0.5864],\n",
-      "         [ 0.3672, -0.9549, -0.6422],\n",
-      "         [ 1.3897, -1.3656,  2.5283],\n",
-      "         [-0.5202, -0.5294, -1.8432]],\n",
-      "\n",
-      "        [[ 0.3496,  1.1057, -0.2214],\n",
-      "         [ 1.9922,  1.8712,  1.1106],\n",
-      "         [-0.1502,  0.9089,  1.5708],\n",
-      "         [ 0.8792, -0.5541, -0.6046],\n",
-      "         [ 2.1860,  0.5597, -0.6657]],\n",
-      "\n",
-      "        [[ 0.8653,  1.2444,  0.2525],\n",
-      "         [ 0.9986,  0.6688,  0.6406],\n",
-      "         [ 0.6206,  1.0857, -0.6576],\n",
-      "         [-0.3740,  2.3752, -0.1579],\n",
-      "         [ 0.6920, -0.3824, -1.3209]],\n",
-      "\n",
-      "        [[ 0.4099,  0.2090,  1.5862],\n",
-      "         [-1.8327, -1.5950,  0.1400],\n",
-      "         [-0.2812, -1.3451,  0.0511],\n",
-      "         [ 0.2164, -0.5951, -0.6695],\n",
-      "         [-0.1108,  0.3794, -1.6985]]])\n",
-      "torch.Size([4, 5, 3]) torch.Size([4, 5, 3]) (15, 3, 1) 94569426098400\n",
-      "tensor([[[-0.0927,  0.2095, -1.8272],\n",
-      "         [-0.0730,  0.6548,  0.5864],\n",
-      "         [ 0.3672, -0.9549, -0.6422],\n",
-      "         [ 1.3897, -1.3656,  2.5283],\n",
-      "         [-0.5202, -0.5294, -1.8432]],\n",
-      "\n",
-      "        [[ 0.3496,  1.1057, -0.2214],\n",
-      "         [ 1.9922,  1.8712,  1.1106],\n",
-      "         [-0.1502,  0.9089,  1.5708],\n",
-      "         [ 0.8792, -0.5541, -0.6046],\n",
-      "         [ 2.1860,  0.5597, -0.6657]],\n",
-      "\n",
-      "        [[ 0.8653,  1.2444,  0.2525],\n",
-      "         [ 0.9986,  0.6688,  0.6406],\n",
-      "         [ 0.6206,  1.0857, -0.6576],\n",
-      "         [-0.3740,  2.3752, -0.1579],\n",
-      "         [ 0.6920, -0.3824, -1.3209]],\n",
-      "\n",
-      "        [[ 0.4099,  0.2090,  1.5862],\n",
-      "         [-1.8327, -1.5950,  0.1400],\n",
-      "         [-0.2812, -1.3451,  0.0511],\n",
-      "         [ 0.2164, -0.5951, -0.6695],\n",
-      "         [-0.1108,  0.3794, -1.6985]]])\n",
-      "torch.Size([3, 4, 5]) torch.Size([3, 4, 5]) (20, 5, 1) 94569426107440\n"
-     ]
-    }
-   ],
    "source": [
-    "a = torch.randn(3, 4, 5)\n",
-    "b = a.permute(1, 2, 0)\n",
-    "c = b.contiguous()\n",
-    "d = a.contiguous()\n",
-    "# a has \"standard layout\" (also known as C layout in numpy) descending strides, and no memory gaps (stride(i-1) == size(i)*stride(i))\n",
-    "print (a.size(), a.shape, a.stride(), a.data_ptr())\n",
-    "print (a)\n",
-    "# b has same storage as a (data_ptr), but has the strides and sizes swapped around\n",
-    "print (b.size(), b.shape, b.stride(), b.data_ptr())\n",
-    "print (b)\n",
-    "# c is in new storage, where it has been arranged in standard layout (which is \"contiguous\")\n",
-    "print (c.size(), c.shape, c.stride(), c.data_ptr())\n",
-    "print (c)\n",
-    "# d is exactly as a, as a was contiguous all along\n",
-    "print (d.size(), d.shape, d.stride(), d.data_ptr())"
+    "forward(output, target)"
    ]
   },
   {
@@ -382,7 +278,7 @@
     "        box2_xyxy = torch.FloatTensor(box2.size())\n",
     "        box2_xyxy[:,:2] = box2[:,:2]/14. -0.5*box2[:,2:4]\n",
     "        box2_xyxy[:,2:4] = box2[:,:2]/14. +0.5*box2[:,2:4]\n",
-    "        iou = self.compute_iou(box1_xyxy[:,:4],box2_xyxy[:,:4]) #[2,1]\n",
+    "        iou = cal_iou(box1_xyxy[:,:4],box2_xyxy[:,:4]) #[2,1]\n",
     "        max_iou,max_index = iou.max(0)\n",
     "        max_index = max_index.data.cuda()\n",
     "\n",
@@ -415,13 +311,13 @@
     "    #3.class loss\n",
     "    class_loss = F.mse_loss(class_pred,class_target,size_average=False)\n",
     "    \n",
-    "    return (self.l_coord*loc_loss + 2*contain_loss + not_contain_loss + self.l_noobj*nooobj_loss + class_loss)/N\n",
+    "    return (5.0*loc_loss + 2*contain_loss + not_contain_loss + 0.5*nooobj_loss + class_loss)/N\n",
     "                 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
