--- a/yolo_train.ipynb
+++ b/yolo_train.ipynb
@@ -133,7 +133,7 @@
     "optimizer = torch.optim.SGD(net.parameters(), lr=lr, momentum=0.9, weight_decay = 5*1e-4)\n",
     "scheduler = torch.optim.lr_scheduler.MultiStepLR(optimizer, milestones=[20,40,60], gamma=0.1)\n",
     "stats_manager = vocModel.DetectionStatsManager()\n",
-    "exp1 = nt.Experiment(net, train_loader, val_loader, scheduler, stats_manager,batch_size=batch_size,\n",
+    "exp1 = nt.Experiment(net, train_loader, val_loader, optimizer, scheduler, stats_manager,batch_size=batch_size,\n",
     "                     output_dir=\"data/resnet_newYOLOLOSS_2\", perform_validation_during_training=True)"
    ]
   },
