delete unnecessary files

--- a/yolo_train.ipynb
+++ b/yolo_train.ipynb
@@ -1831,8 +1831,8 @@
     "print (predictions)\n",
     "gt_class_count = torch.zeros(len(class_dict)).to(device)\n",
     "print (gt_class_count)\n",
-    "# test_iter = iter(test_loader)\n",
-    "# print (len(test_loader))\n",
+    "test_iter = iter(test_loader)\n",
+    "print (len(test_loader))\n",
     "net.eval()\n",
     "with torch.no_grad():\n",
     "#     for img, target, bboxes, labels in test_loader:\n",
