readme.md fixed

--- a/yolo_train.ipynb
+++ b/yolo_train.ipynb
@@ -1910,7 +1910,8 @@
     "        print (output_bboxes[i,:].to('cpu').numpy(), class_list[t])\n",
     "        color = color_list[t % len(color_list)]\n",
     "        rect = patches.Rectangle((xmin,ymin),xmax-xmin,ymax-ymin,linewidth=2,edgecolor=color,facecolor='none')\n",
-    "        axs.text(xmin, min(300,ymin), \"{} : {:.4f}\".format(class_list[t], output_bboxes[i,4]) , family='sans-serif', size=14)\n",
+    "        axs.text(xmin, min(300,ymin), \"{} : {:.4f}\".format(class_list[t], output_bboxes[i,4]) \\\n",
+    "                 , family='sans-serif', size=14)\n",
     "        axs.add_patch(rect)\n",
     "\n",
     "    \n",
